Bug 293057 - KMail2 (Italian localization) fails to organize local folders in alphabetical order
Summary: KMail2 (Italian localization) fails to organize local folders in alphabetical...
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.8
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-01 15:57 UTC by Burroughs
Modified: 2012-02-14 09:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Burroughs 2012-02-01 15:57:09 UTC
Version:           4.8 (using KDE 4.8.0) 
OS:                Linux

After upgrading KDE to 4.8.0, once KMail2 is being open, Local Folders in the Italian localization don't show up in alphabetical order, but in a very strange one.

Reproducible: Always

Steps to Reproduce:
Opening KMail2 is enough; this is the list that shows up everytime: in uscita (outbox)>>inviata (sent)>>cestino (trash)>>bozze (drafts)>>modelli (templates or something like that)>>in arrivo (inbox).


Expected Results:  
This should be the right order: in arrivo (inbox)>>in uscita (outbox)>>inviata (sent)>>bozze (drafts)>>cestino (trash)>>modelli (templates).
Comment 1 Laurent Montel 2012-02-14 09:27:27 UTC
Git commit 3b552c205265e3e6b65df0b408a0e0cdfe2184b2 by Montel Laurent.
Committed on 14/02/2012 at 10:27.
Pushed by mlaurent into branch 'master'.

Fix Bug 293057 - KMail2 (Italian localization) fails to organize local folders in alphabetical order

FIXED-IN: 4.8.1

M  +4    -0    mailcommon/mailkernel.cpp

http://commits.kde.org/kdepim/3b552c205265e3e6b65df0b408a0e0cdfe2184b2
Comment 2 Laurent Montel 2012-02-14 09:29:15 UTC
Git commit 65e09975d4930bdc2e6fea0cf629f2692d8a2d79 by Montel Laurent.
Committed on 14/02/2012 at 10:27.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 293057 - KMail2 (Italian localization) fails to organize local folders in alphabetical order

FIXED-IN: 4.8.1
(cherry picked from commit 3b552c205265e3e6b65df0b408a0e0cdfe2184b2)

Conflicts:

	mailcommon/mailkernel.cpp

M  +7    -1    mailcommon/mailkernel.cpp

http://commits.kde.org/kdepim/65e09975d4930bdc2e6fea0cf629f2692d8a2d79