Fix Bug 293057 - KMail2 (Italian localization) fails to organize local folders in alphabetical order

FIXED-IN: 4.8.1
BUG: 293057