mailcommon/mailkernel.cpp
@@ -341,6 +341,10 @@ bool Kernel::folderIsInbox( const Akonadi::Collection &collection, bool withoutP
        collection.remoteId().toLower() == QLatin1String( ".inbox" ) ) {
     return true;
   }
+  //Fix order. Remoteid is not "inbox" when translated
+  if( collection == Akonadi::SpecialMailCollections::self()->defaultCollection( Akonadi::SpecialMailCollections::Inbox ) ) {
+    return true;
+  }
 
   if ( !withoutPop3InboxSetting ) {
     const Akonadi::AgentInstance::List lst = MailCommon::Util::agentInstances();
